--- a/.github/workflows/encouragement.yml
+++ b/.github/workflows/encouragement.yml
@@ -6,7 +6,7 @@ on: push
 
 jobs:
   Give-props:
-    runs-on: [self-hosted, encouragement]
+    runs-on: [ubuntu-latest]
 
     steps:
     - name: Commit Comment
