--- a/.github/workflows/encouragement.yml
+++ b/.github/workflows/encouragement.yml
@@ -7,6 +7,7 @@ on: [push, workflow_call]
 jobs:
   Give-props:
     runs-on: [ubuntu-latest]
+    environment: test
 
     steps:
     - name: Commit Comment
